[gd_scene load_steps=2 format=3 uid="uid://b4u0aqrkkwhfi"]

[ext_resource type="Script" path="res://Scripts/UI/InfoPopup/InfoPopup.gd" id="1_b11bo"]

[node name="InfoPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b11bo")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -755.0
offset_right = 745.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVBox" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/MainVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 60
text = "Title"
horizontal_alignment = 1

[node name="ContentsLabel" type="RichTextLabel" parent="PanelContainer/MainVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
text = "Contents
"

[node name="ButtonHBox" type="HBoxContainer" parent="PanelContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="PanelContainer/MainVBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="MoreInfoButton" type="Button" parent="PanelContainer/MainVBox/ButtonHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "More Info"

[connection signal="pressed" from="PanelContainer/MainVBox/ButtonHBox/BackButton" to="." method="_on_back_button_pressed"]
